@@ -1,3 +1,7 @@
+05 January 2016: Wouter
+	- #732: tcp-mss, outgoing-tcp-mss options for nsd.conf, patch
+	  from Daisuke Higashi.
+
 04 January 2016: Wouter
 	- Updated acx_nlnetlabs to version 32.
 
